jello changelog

20210614 v1.4.0
- Enhance error handling when a dict method is accessed (e.g. .get)
- Enhance exception error messages
- Pygments library dependency is now optional
- Code refactor to split cli from lib

20210609 v1.3.6
- Documentation fixes for packages and binaries hosting

20210609 v1.3.5
- Enhance lines output to support colors
- Enhance raw output to force monochrome output

20210609 v1.3.4
- Documentation fixes

20210608 v1.3.3
- Raise exception while creating JSON for non-serializable objects

20210608 v1.3.2
- Fix JSON strings with UTF-8 characters in Schema output

20210608 v1.3.1
- Fix regression with JELLO_COLORS environment variable

20210608 v1.3.0
- Add ability to use dot notation
- Add more version information
- Enhance performance and memory utilization for larger datasets
- Enhance JSON strings to output UTF-8 characters instead of escaped codes
- Enhance compact output to be even more compact by removing extra spaces
- Add tests for python 3.9

20210524 v1.2.11
- Fix colors on Windows
- Fix unrecognized characters in README.md for Windows
- Create MSI installer for Windows

20200909 v1.2.10
- Add 'as_lib' option to pyquery and load_json to allow raising exceptions when being used as a module

20200728 v1.2.9
- Use sys.exit() for pyoxidizer support

20200614 v1.2.8
- Improve handling of blank input

20200612 v1.2.7
- Handle blank input gracefully

20200509 v1.2.6
- Add license file to package
- Remove tests from package
- Reduce pygments requirement to v2.4.2

20200412 v1.2.5
- Add custom colors to JELLO_COLORS env variable and .jelloconf.py

20200409 v1.2.4
- Fix Windows compatibility for broken pipe handling

20200409 v1.2.3
- Simplify broken pipe handling

20200409 v1.2.2
- Enhance schema format and colors for arrays
- Simplify schema monochrome code

20200409 v1.2.1
- Add colors to schema view
- Add schema option to .jelloconf.py
- Change JSON colors to use ansi colors to match schema view
- Fix BrokenPipeError message
