@@ -1,6 +1,7 @@
 jello changelog
 
 20210614 v1.4.0
+- Add type annotation option for Schema view
 - Enhance error handling when a dict method is accessed (e.g. .get)
 - Enhance exception error messages
 - Pygments library dependency is now optional
